FIX: fixed the overflow white space

--- a/front-end/rcsc/src/style-sheet/home-front-page.css
+++ b/front-end/rcsc/src/style-sheet/home-front-page.css
@@ -119,7 +119,7 @@ This is the parent div for the tag line on the right of the image.
   .homepage_parent_container {
     background: rgb(0, 148, 151);
     margin: 0;
-    height: 210vh;
+    height: 1800px;
   }
   .front_page_content {
     margin: 0 !important;
